# NeuroSurvivor

./: CMakeLists.txt  Dockerfile  README.md
include/: camera.h  game.h  game_api.h  game_loop.h  game_renderer.h  i_function.h  i_game_renderer.h  i_input_handler.h  i_script_manager.h  input_handler.h  item.h  player_renderer.h  python_function.h  python_script_manager.h  render_utils.h  timer.h
include/game_objects/: enemy.h  entity.h  game_object.h  player.h  projectile.h
src/: camera.cpp  game.cpp  game_api.cpp  game_loop.cpp  game_renderer.cpp  input_handler.cpp  item.cpp  main.cpp  player_renderer.cpp  python_function.cpp  python_script_manager.cpp  render_utils.cpp  timer.cpp
src/game_objects/: enemy.cpp  entity.cpp  game_object.cpp  player.cpp  projectile.cpp
